Update to worksheet

--- a/digital-literacy/computer-organisation/questions.html
+++ b/digital-literacy/computer-organisation/questions.html
@@ -444,6 +444,7 @@
 <p>Try and answer either via observation or by online research, or by combining the two.<br />
 If relevant, embed a photo into your worksheet.</p>
 <ol style="list-style-type: decimal">
+<li>How many different tasks does the device do?</li>
 <li>How does the device get power? There may be more ways than one.<br />
 </li>
 <li>What forms of input can the device take?</li>
